Up2Go-travelexpenses/src/objects/Expense__c.object
<CustomObject>
    <description>Contains informations about the expenses.</description>
    <fields>
        <fullName>chk_BreakfastIncluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Breakfast Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chk_RoundTrip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RoundTrip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cur_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Overall cost of the expense.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cur_Bill__c</fullName>
        <label>Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cur_Deduction__c</fullName>
        <label>Deduction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cur_OriginalAmount__c</fullName>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cur_Tip__c</fullName>
        <label>Tip</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>dat_CheckInDate__c</fullName>
        <label>Check In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_CheckOutDate__c</fullName>
        <label>Check Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_ExpenseDate__c</fullName>
        <description>To assign a Expense to a specific travel date.</description>
        <label>Expense Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_PickUpDate__c</fullName>
        <label>Pick-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_ReturnDate__c</fullName>
        <label>Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dtm_ArrivalTime__c</fullName>
        <label>Arrival Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dtm_Begin__c</fullName>
        <label>Begin</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dtm_DepartureTime__c</fullName>
        <label>Departure Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dtm_End__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dtm_ReturnArrival__c</fullName>
        <label>Return Arrival</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dtm_ReturnDeparture__c</fullName>
        <label>Return Departure</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fcur_MilageCosts__c</fullName>
        <formula>lkp_VehicleType__r.cur_MilageAllowance__c  *  num_Milage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milage Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>lkp_LocationFrom__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Location From</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Not a location.</errorMessage>
            <filterItems>
                <field>CompensationRate__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CompensationRate__c</referenceTo>
        <relationshipLabel>Expenses (Location From)</relationshipLabel>
        <relationshipName>Expenses2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkp_Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Not a location.</errorMessage>
            <filterItems>
                <field>CompensationRate__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CompensationRate__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkp_MealInvitation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meal Invitation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MealInvitation__c.mdr_Travel__c</field>
                <operation>equals</operation>
                <valueField>$Source.mdr_Travel__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MealInvitation__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkp_ReturnTrip__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Return Trip</label>
        <referenceTo>Expense__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkp_VehicleType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vehicle Type</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or isn&apos;t a vehicle.</errorMessage>
            <filterItems>
                <field>CompensationRate__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vehicle</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CompensationRate__c</referenceTo>
        <relationshipLabel>Expenses (Vehicle Type)</relationshipLabel>
        <relationshipName>Expenses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mdr_Travel__c</fullName>
        <label>Travel</label>
        <referenceTo>Travel__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>num_Milage__c</fullName>
        <inlineHelpText>Overall travelled distance in kilometers (one-way or round trip).</inlineHelpText>
        <label>Milage (km)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pkl_Reimbursement__c</fullName>
        <label>Reimbursement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I paid for this, please reimburse me.</fullName>
                </value>
                <value>
                    <fullName>The company paid for this.</fullName>
                </value>
                <value>
                    <fullName>The customer paid for this.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>txa_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txa_EntertainedPersons__c</fullName>
        <label>Entertained Persons</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txt_From__c</fullName>
        <inlineHelpText>Please use the autocomplete to choose the location.</inlineHelpText>
        <label>From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_LodgingAdress__c</fullName>
        <inlineHelpText>Please use the autocomplete to choose the location.</inlineHelpText>
        <label>Lodging Adress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_PlaceOfEntertainment__c</fullName>
        <inlineHelpText>Please use the autocomplete to choose the location.</inlineHelpText>
        <label>Place Of Entertainment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Reason__c</fullName>
        <label>Reason</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_To__c</fullName>
        <inlineHelpText>Please use the autocomplete to choose the location.</inlineHelpText>
        <label>To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Expense</label>
    <nameField>
        <displayFormat>EX-{00000}</displayFormat>
        <label>Expense #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <recordTypes>
        <fullName>Accommodation</fullName>
        <active>true</active>
        <description>Expense for accommodation costs</description>
        <label>Accommodation</label>
    </recordTypes>
    <recordTypes>
        <fullName>CompanyVehicleRide</fullName>
        <active>true</active>
        <description>Expense for a journey with a company vehicle</description>
        <label>Company Vehicle Ride</label>
    </recordTypes>
    <recordTypes>
        <fullName>Entertainment</fullName>
        <active>true</active>
        <description>Expense for food and service costs</description>
        <label>Entertainment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flight</fullName>
        <active>true</active>
        <description>Expense for airtravel</description>
        <label>Flight</label>
    </recordTypes>
    <recordTypes>
        <fullName>Miscellaneous</fullName>
        <active>true</active>
        <description>Other expenses, such as taxi, metro, gasoline costs or parking fee.</description>
        <label>Miscellaneous</label>
    </recordTypes>
    <recordTypes>
        <fullName>PrivateVehicleRide</fullName>
        <active>true</active>
        <description>Expense for a journey with a private vehicle</description>
        <label>Private Vehicle Ride</label>
    </recordTypes>
    <recordTypes>
        <fullName>RentalVehicle</fullName>
        <active>true</active>
        <description>Expense for renting a vehicle.</description>
        <label>Rental Vehicle</label>
    </recordTypes>
    <recordTypes>
        <fullName>SeaTravel</fullName>
        <active>true</active>
        <description>Expense for a journey with a boat</description>
        <label>Sea Travel</label>
    </recordTypes>
    <recordTypes>
        <fullName>TrainRide</fullName>
        <active>true</active>
        <description>Expense for travels by train</description>
        <label>Train Ride</label>
    </recordTypes>
    <recordTypes>
        <fullName>perDiem</fullName>
        <active>true</active>
        <description>auto-generated Expense records for calculating the per diem allowance</description>
        <label>per Diem</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>